# backuppc_pool_reader

./: .releaserc  CHANGELOG.md  Cargo.toml  LICENCE  README  package-lock.json  package.json
.gitea/workflows/: cd.yml  push.yml  release-plz.yml  release.yml
src/: attribute_file.rs  compress.rs  decode_attribut.rs  filesystem.rs  hosts.rs  lib.rs  main.rs  pool.rs  util.rs  view.rs
