[package]
name = "backuppc_pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.3"
flate2 = { version = "1.0.28", features = [
  "zlib-ng",
], default-features = false }
fuser = "0.14"
libc = "0.2"
log = "0.4.21"
lru = "0.12.3"
miniz_oxide = "0.7"
num-traits = "0.2.18"
rand = "0.8.5"
time = "0.3"
twox-hash = "1.6.3"

[dev-dependencies]
mockall = "0.12"
