[package]
name = "backuppc_pool_reader"
description = "A Library and CLI for reading BackupPC pool files (contains a FUSE file system to mount the pool)"
homepage = "https://gogs.shadoware.org/phoenix/backuppc_pool"
repository = "https://gogs.shadoware.org/phoenix/backuppc_pool.git"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["backuppc", "pool", "fuse", "filesystem"]
publish = ["gitea"]

[lib]
name = "backuppc_pool_reader"
path = "src/lib.rs"

[[bin]]
name = "backuppc_pool_reader"
path = "src/main.rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.3"
flate2 = { version = "1.0.28" }
fuser = "0.14"
libc = "0.2"
log = "0.4.21"
lru = "0.12.3"
miniz_oxide = "0.7"
num-traits = "0.2.18"
rand = "0.8.5"
time = "0.3"
twox-hash = "1.6.3"

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = { version = "1.0.28", default-features = false, features = [
  "zlib-ng",
] }


[dev-dependencies]
mockall = "0.12"
