[package]
name = "backuppc_pool_reader"
description = "A Library and CLI for reading BackupPC pool files (contains a FUSE file system to mount the pool)"
homepage = "https://gogs.shadoware.org/phoenix/backuppc_pool"
repository = "https://gogs.shadoware.org/phoenix/backuppc_pool.git"
readme = "README.md"
version = "1.1.0"
edition = "2021"
license = "MIT"
keywords = ["backuppc", "pool", "fuse", "filesystem"]
publish = ["crates-io", "gitea"]
exclude = [
  ".gitea",
  ".vscode",
  "package.json",
  "package-lock.json",
  ".releaserc",
]

[features]
fuse = ["dep:fuser", "dep:libc", "dep:twox-hash", "dep:rand"]
cli = ["dep:clap", "dep:env_logger", "fuse"]

[lib]
name = "backuppc_pool_reader"
path = "src/lib.rs"

[[bin]]
name = "backuppc_pool_reader"
path = "src/main.rs"
required-features = ["fuse", "cli"]

[dependencies]
lru = "0.12.3"
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive"], optional = true }
env_logger = { version = "0.11.3", optional = true }
flate2 = { version = "1.0.28" }
fuser = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }
num-traits = "0.2.18"
log = "0.4.21"
rand = { version = "0.8.5", optional = true }
twox-hash = { version = "1.6.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = { version = "1.0.28", default-features = false, features = [
  "zlib-ng",
] }


[dev-dependencies]
mockall = "0.12"
